@@ -27,6 +27,7 @@
 #include "str_list.h"
 #include "config.h"
 #include "filter.h"
+#include "segtype.h"
 
 #include <limits.h>
 #include <fcntl.h>
@@ -563,6 +564,35 @@ int lvs_in_vg_opened(struct volume_group *vg)
 	return count;
 }
 
+#ifdef DMEVENTD
+static int _register_dev(struct cmd_context *cmd, struct logical_volume *lv,
+                         int do_reg)
+{
+
+	struct list *tmp;
+	struct lv_segment *seg;
+	int (*reg) (struct dm_pool *mem, struct lv_segment *,
+		    struct config_tree *cft, int events);
+
+	list_iterate(tmp, &lv->segments) {
+		seg = list_item(tmp, struct lv_segment);
+
+		if (do_reg)
+			reg = seg->segtype->ops->target_register;
+		else
+			reg = seg->segtype->ops->target_unregister;
+
+		if (reg)
+			/* FIXME specify events */
+			if (!reg(cmd->mem, seg, cmd->cft, 0)) {
+				stack;
+				return 0;
+			}
+	}
+	return 1;
+}
+#endif
+
 static int _lv_suspend(struct cmd_context *cmd, const char *lvid_s,
 		       int error_if_not_suspended)
 {
@@ -595,6 +625,9 @@ static int _lv_suspend(struct cmd_context *cmd, const char *lvid_s,
 		}
 	}
 
+#ifdef DMEVENTD
+	_register_dev(cmd, lv, 0);
+#endif
 	memlock_inc();
 	if (!_lv_suspend_lv(lv)) {
 		memlock_dec();
@@ -645,6 +678,10 @@ static int _lv_resume(struct cmd_context *cmd, const char *lvid_s,
 	memlock_dec();
 	fs_unlock();
 
+#ifdef DMEVENTD
+	_register_dev(cmd, lv, 1);
+#endif
+
 	return 1;
 }
 
@@ -687,6 +724,10 @@ int lv_deactivate(struct cmd_context *cmd, const char *lvid_s)
 			  lv->name);
 		return 0;
 	}
+
+#ifdef DMEVENTD
+	_register_dev(cmd, lv, 0);
+#endif
 
 	memlock_inc();
 	r = _lv_deactivate(lv);
@@ -757,6 +798,10 @@ static int _lv_activate(struct cmd_context *cmd, const char *lvid_s,
 	r = _lv_activate_lv(lv);
 	memlock_dec();
 	fs_unlock();
+
+#ifdef DMEVENTD
+	_register_dev(cmd, lv, 1);
+#endif
 
 	return r;
 }
