@@ -43,8 +43,8 @@ The values are:
 Display the mapping of logical extents to physical volumes and
 physical extents.
 .SH Examples
-"lvdisplay -v /dev/vg00/lvol2" shows attributes of that logical volume
-and its mapping of logical to physical extents. In case snapshot
+"lvdisplay -v /dev/vg00/lvol2" shows attributes of that logical volume.
+If snapshot
 logical volumes have been created for this original logical volume,
 this command shows a list of all snapshot logical volumes and their
 status (active or inactive) as well.
